--- a/styles.css
+++ b/styles.css
@@ -239,11 +239,13 @@ button:hover:not(:disabled) {
 
     h1 {
         font-size: 3.5rem;
+        margin-bottom: 1.5rem;
+        margin-top: 0.5rem;
     }
 
     .logo {
-        margin-bottom: 1rem;
-        transform: scale(0.8);
+        margin-bottom: 0.1rem;
+        transform: scale(0.7);
     }
 }
 
